make some changes

--- a/Topic_Model_Gibbs_MCMC_Dat.ipynb
+++ b/Topic_Model_Gibbs_MCMC_Dat.ipynb
@@ -3,8 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -13,11 +11,12 @@
     "import itertools\n",
     "sns.set_style(\"darkgrid\")\n",
     "np.random.seed(seed=1)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Data and Model\n",
     "\n",
@@ -45,11 +44,11 @@
     "$K$: Number of topics, $k = 1,\\dots, K$\n",
     "\n",
     "$V$: Number of words in the vocab, $v=1,\\dots, V$\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Prior:\n",
     "We put prior $\\theta_k \\sim \\text{Dir}(\\alpha)$ independently for $k = 1,\\dots, K$ and $\\gamma \\sim U(0, 10)$. \n",
@@ -70,13 +69,12 @@
     "    P(z_{ij} = k | X_{ij} = v, (\\theta_k), (\\beta_i)) = \\dfrac{\\theta_{kv} \\beta_{ik}}{\\sum_{k'\\in [K]} \\theta_{k'v} \\beta_{ik'}}\n",
     "\\end{equation}\n",
     "Finally we can update $\\gamma$ conditioning on $(\\beta_i)_{i\\in [D]}$ using Metropolis-Hasting algorithm."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def gen_prior(D, N, V, K, α=1, u=10.0):\n",
     "    \"\"\"\n",
@@ -97,13 +95,13 @@
     "    for τ in list_permu:\n",
     "        errs.append(np.linalg.norm(θ - θprime[list(τ)]))\n",
     "    return min(errs)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 129,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def sample_theta(X, z, α):\n",
     "    \"\"\"\n",
@@ -153,11 +151,12 @@
     "            γ = γ_prime\n",
     "    print('gamma is {}'.format(γ))  \n",
     "    return γ"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Toy example: \n",
     "\n",
@@ -170,13 +169,12 @@
     "vocabulary of $V = 30$\n",
     "\n",
     "number of topic $K = 3$"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 142,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def generate_data(D, N, V, K, α=1):\n",
     "    X = np.zeros((D, N))\n",
@@ -186,24 +184,13 @@
     "        η = β[i] @ θ\n",
     "        X[i] = np.random.choice(a=V, size=N, p=η)\n",
     "    return X, θ, β"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 143,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(100, 20)"
-      ]
-     },
-     "execution_count": 143,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "D=100\n",
     "N=20\n",
@@ -211,41 +198,61 @@
     "K=3\n",
     "X, true_θ, true_β = generate_data(D, N, V, K, α=1)\n",
     "X.shape"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(100, 20)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 143
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Inference"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 144,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "\n",
     "α = 1\n",
     "θ, β, z, γ = gen_prior(D, N, V, K, α=1, u=10.0)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "source": [
+    "Make some changes"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 145,
-   "metadata": {},
+   "source": [
+    "for _ in range(1000):\n",
+    "    θ = sample_theta(X, z, α)\n",
+    "    β = sample_beta(z, γ)\n",
+    "    z = sample_z(θ, β, X)\n",
+    "    γ = sample_gamma(γ, β, σ=0.1)\n",
+    "    print('error of theta is {}'.format(compare(θ, true_θ, K)))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "gamma is 3.0653624138439306\n",
       "error of theta is 0.29912562256663594\n",
@@ -502,8 +509,8 @@
      ]
     },
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "gamma is 0.9221936938390664\n",
       "error of theta is 0.1683265330525042\n",
@@ -760,8 +767,8 @@
      ]
     },
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "gamma is 0.8454377183530436\n",
       "error of theta is 0.1680514525698963\n",
@@ -1018,8 +1025,8 @@
      ]
     },
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "gamma is 0.8583298274476078\n",
       "error of theta is 0.1314629076138344\n",
@@ -1276,8 +1283,8 @@
      ]
     },
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "gamma is 1.1977385960801081\n",
       "error of theta is 0.19896486745313008\n",
@@ -1534,8 +1541,8 @@
      ]
     },
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "gamma is 0.9811977945765258\n",
       "error of theta is 0.16442171166424827\n",
@@ -1792,8 +1799,8 @@
      ]
     },
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "gamma is 0.4870346772785171\n",
       "error of theta is 0.17579951639938696\n",
@@ -2050,8 +2057,8 @@
      ]
     },
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "gamma is 0.4397694699996692\n",
       "error of theta is 0.1642769366714249\n",
@@ -2292,28 +2299,21 @@
      ]
     }
    ],
-   "source": [
-    "for _ in range(1000):\n",
-    "    θ = sample_theta(X, z, α)\n",
-    "    β = sample_beta(z, γ)\n",
-    "    z = sample_z(θ, β, X)\n",
-    "    γ = sample_gamma(γ, β, σ=0.1)\n",
-    "    print('error of theta is {}'.format(compare(θ, true_θ, K)))"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "We can see that $\\gamma$ is converging to its true value $0.5$ and the error of $\\theta$ (convex polytope) is decreasing."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
